--- a/estilos.css
+++ b/estilos.css
@@ -1,15 +1,123 @@
-/* Fondo de la página */
-body {background-color: black;}
+/* Estilos globales */
+body {
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 
-/* "Header" de la página */
-div.header {display:flex; align-items: center;}
-img#logo {width: 5%; height: 5%; border-radius: 50%;}
-h1#nombre {color:blanchedalmond; margin-left: 1pc;}
+.titulo {
+  text-align: center;
+}
 
-/* Colorear y centrar el texto */
-* {text-align: center;}
-h2.titulo {color: peachpuff;}
-p {color: aliceblue;}
+/* Estilos para el header */
+header {
+  background-color: #8dbdfd;
+  color: #fff;
+  text-align: center;
+  padding: 0px 60px 0px 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-/* Links de contacto */
-p.contacto { color: greenyellow;}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+/* Estilos para la "barra de navegación" */
+nav {
+  display: flex;
+  align-items: center;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 15px;
+}
+
+/* Estilos para imágenes */
+img#logo {
+  width: 5%;
+  height: auto;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+img.icon {
+  height: 30px;
+  width: 30px;
+}
+
+img.technologies {
+  height: 55px;
+  width: auto;
+}
+
+.imagen-perfil {
+  float: left;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 25px;
+  display: flex;
+}
+
+.imagen-perfil img {
+  justify-content: left;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* "Footer" de la página */
+footer {
+  text-align: center;
+  background-color: #8dbdfd;
+  color: #fff;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+footer img {
+  padding: 15px;
+  max-height: 10ch;
+}
+
+/* "Tarjetitas" */
+#aboutMe {
+  background-color: #f2f2f2;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: black;
+  text-align: left;
+}
+
+.hero {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center; /* Alineación vertical al centro */
+  padding: 60px;
+  height: 300px;
+}
+
+section {
+  background-color: #f2f2f2;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.cajita {
+  display: center;
+}
