--- a/estilos.css
+++ b/estilos.css
@@ -3,60 +3,57 @@ body {
   background-color: #f2f2f2;
   margin: 0;
   padding: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-.titulo {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
+  
+  .titulo {
   text-align: center;
-}
+  margin-top: 20px;
+  font-size: 28px; }
 
-/* Estilos para el header */
-header {
+  section {
+  margin-bottom: 20px; }
+
+  /* Estilos para el header */
+  header {
   background-color: #8dbdfd;
   color: #fff;
   text-align: center;
-  padding: 0px 60px 0px 60px;
+  padding: 0 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
 
 .header {
   display: flex;
   align-items: center;
-  justify-content: left;
-}
+  justify-content: left; }
 
 /* Estilos para la "barra de navegación" */
 nav {
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
 nav a {
   color: #fff;
   text-decoration: none;
-  margin: 0 15px;
-}
+  margin: 0 15px; }
 
 /* Estilos para imágenes */
 img#logo {
   width: 5%;
   height: auto;
   border-radius: 50%;
-  margin-right: 10px;
-}
+  margin-right: 10px; }
 
 img.icon {
   height: 30px;
-  width: 30px;
-}
+  width: 30px; }
 
 img.technologies {
   height: 55px;
   width: auto;
-}
+  padding: 5px; }
 
 .imagen-perfil {
   float: left;
@@ -65,16 +62,40 @@ img.technologies {
   overflow: hidden;
   border-radius: 50%;
   margin-right: 25px;
-  display: flex;
-}
+  display: flex; }
 
 .imagen-perfil img {
-  justify-content: left;
-  display: flex;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
+  object-fit: cover; }
+
+  /* Sección "Sobre mí" */
+ #aboutMe {
+color: black;
+text-align: left; }
+
+#aboutMe, section {
+background-color: #f2f2f2;
+padding: 30px;
+border-radius: 10px;
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
+
+/* Estilos para la sección de proyectos */
+.projects {
+  text-align: center;
+  margin: 20px auto; }
+
+.projects a {
+  display: inline-block;
+  border-radius: 10px;
+  overflow: hidden; }
+
+.projects img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); }
+
 
 /* "Footer" de la página */
 footer {
@@ -84,40 +105,41 @@ footer {
   padding: 20px;
   display: flex;
   align-items: center;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 footer img {
   padding: 15px;
   max-height: 10ch;
 }
 
-/* "Tarjetitas" */
-#aboutMe {
-  background-color: #f2f2f2;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  color: black;
-  text-align: left;
-}
+/* Media queries para redimenzionar la web a celulares */
+@media (max-width: 768px) {
+  header {
+  padding: 10px 20px;} 
 
-.hero {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center; /* Alineación vertical al centro */
-  padding: 60px;
-  height: 300px;
-}
+  .header {
+  align-items: center;}
 
-section {
-  background-color: #f2f2f2;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
+  img#logo {
+  width: 50px;}
 
-.cajita {
-  display: center;
+  nav {
+  flex-direction: column; }
+
+  nav a {
+  margin: 5px 0; }
+
+  img.icon {
+  height: 25px;
+  width: 25px; }
+
+  .projects img {
+  max-width: 90%; }
+
+  .descripcion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 }
